# BetterTaros

./: CMakeLists.txt  Diffusion0.fig  Diffusion1(13).fig  Diffusion1.fig  Flocking0n1(13).fig  LHC_Parameters_for_Runs(Noise).csv  LHC_Parameters_for_Runs(legacy).csv  LHC_Parameters_for_Runs.csv  LHC_Parameters_for_Runs_confirmtime.csv  LHC_Parameters_for_Runs_taros.csv  MemoryLog.csv  build  foraging.txt
1/: Data.csv
1/1/: MemoryLog.csv
1/10/: MemoryLog.csv
1/100/: MemoryLog.csv
1/11/: MemoryLog.csv
1/12/: MemoryLog.csv
1/13/: MemoryLog.csv
1/14/: MemoryLog.csv
1/15/: MemoryLog.csv
1/16/: MemoryLog.csv
1/17/: MemoryLog.csv
1/18/: MemoryLog.csv
1/19/: MemoryLog.csv
1/2/: MemoryLog.csv
1/20/: MemoryLog.csv
1/21/: MemoryLog.csv
1/22/: MemoryLog.csv
1/23/: MemoryLog.csv
1/24/: MemoryLog.csv
1/25/: MemoryLog.csv
1/26/: MemoryLog.csv
1/27/: MemoryLog.csv
1/28/: MemoryLog.csv
1/29/: MemoryLog.csv
1/3/: MemoryLog.csv
1/30/: MemoryLog.csv
1/31/: MemoryLog.csv
1/32/: MemoryLog.csv
1/33/: MemoryLog.csv
1/34/: MemoryLog.csv
1/35/: MemoryLog.csv
1/36/: MemoryLog.csv
1/37/: MemoryLog.csv
1/38/: MemoryLog.csv
1/39/: MemoryLog.csv
1/4/: MemoryLog.csv
1/40/: MemoryLog.csv
1/41/: MemoryLog.csv
1/42/: MemoryLog.csv
1/43/: MemoryLog.csv
1/44/: MemoryLog.csv
1/45/: MemoryLog.csv
1/46/: MemoryLog.csv
1/47/: MemoryLog.csv
1/48/: MemoryLog.csv
1/49/: MemoryLog.csv
1/5/: MemoryLog.csv
FinDat/: AllData.ods  ClassTimeResults.csv  Failures.ods  FinDatProcessing.R  FinDatProcessingp2.R  ReDiag.csv
HYPEDATA/: .~lock.LHC_Parameters_for_Runs.csv#
InitialReadings/: SnapShot_AG_CMF_i.csv  SnapShot_AG_CMF_ii.csv  SnapShot_AG_CSF_i.csv  SnapShot_AG_PF_i.csv  SnapShot_AG_PF_ii.csv  SnapShot_AG_PF_iii.csv  SnapShot_AG_PMF_i.csv  SnapShot_AG_PSF_I.csv  SnapShot_AG_PSF_ii.csv  SnapShot_AG_SH_i.csv  SnapShot_AG_SH_ii.csv  SnapShot_FL_CMF_i.csv  SnapShot_FL_PF_i.csv  SnapShot_OA_CMF_i.csv  SnapShot_OA_CMF_ii.csv  SnapShot_OA_CSF_i.csv  SnapShot_OA_CSF_ii.csv  SnapShot_OA_CSF_iii.csv  SnapShot_OA_CSF_iv.csv  SnapShot_OA_PF_ii.csv  SnapShot_OA_PMF_i.csv  SnapShot_OA_PMF_ii.csv  SnapShot_OA_PMF_iii.csv  SnapShot_OA_PMF_iv.csv  SnapShot_OA_PMF_v.csv  SnapShot_OA_PSF_i.csv  SnapShot_OA_PSF_ii.csv  SnapShot_OA_SH_i.csv
OldFigures/: Aggregation0(13).fig  Aggregation1(13).fig  Diffusion0(13).fig  Diffusion0n1(13).fig  Flocking0(13).fig  Flocking0.fig  Flocking1(13).fig  Flocking1.fig
SystemData/: .~lock.Data126.ods#  ClassBoxplots.fig  ClassTable  Data124.csv  Data124.ods  Data125.csv  Data125.ods  Data126.csv  Data126.ods  Data127.csv  Data127.ods  Data128.csv  Data128.ods  Data129.csv  Data129.ods  Data130.csv  Data130.ods  Data131.csv  Data131.ods  Data132.csv  Data132.ods  Data133.csv  Data133.ods  Data134.csv  Data134.ods  Data135.csv  Data135.ods  Data136.csv  Data136.ods  Data137.csv  Data137.ods  Data138.csv  Data138.ods  Data139.csv  Data139.ods  Data140.csv  Data140.ods  Data141.csv  Data141.ods  Data142.csv  (+7 more)
experiments/: diffusion_10.argos  id.argos  testdev.argos
faults/argos3-examples/: CMakeLists.txt
faults/argos3-examples/controllers/: CMakeLists.txt
faults/argos3-examples/controllers/epuck_omega_algorithm/: CMakeLists.txt  epuck_omega_algorithm.cpp  epuck_omega_algorithm.h  fault.h  fault_injector.cpp  fault_injector.h
faults/argos3-examples/experiments/: epuck_omega_algorithm.argos
faults/argos3-examples/loop_functions/: CMakeLists.txt
faults/argos3-examples/loop_functions/epuck_id_loop_functions/: CMakeLists.txt  epuck_id_qtuser_functions.cpp  epuck_id_qtuser_functions.h
faults/argos3-examples/loop_functions/epuck_omega_algorithm_loop_functions/: CMakeLists.txt  epuck_omega_algorithm_loop_functions.cpp  epuck_omega_algorithm_loop_functions.h
loop_functions/: CMakeLists.txt
loop_functions/logging_loop_functions/: CMakeLists.txt  logging_loop_functions.cpp  logging_loop_functions.h  logging_loop_functions_backup.cpp
omega_algorithm/: CMakeLists.txt
omega_algorithm/controllers/epuck_omega_algorithm/: CMakeLists.txt  epuck_omega_algorithm.cpp  epuck_omega_algorithm.h
omega_algorithm/experiments/: epuck_omega_algorithm.argos
(+3270 files in other folders)
